mengubah menjadi dark mode dan memperbaiki beberapa issue ;)

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -104,17 +104,41 @@ main {
   }
 }
 
-#table-form,
-#data-table,
-#temp-conversion,
-#fahrenheit {
-  background-color: #444950;
-  color: #aeb2b6;
+#floatingName,
+#floatingEmail,
+#floatingHp,
+#floatingTextArea {
+  background-color: #212529;
+  color: white;
+  font-size: 18px;
 }
 
-#floatingInput,
-#floatingTextarea2 {
-  background-color: #323234;
+#table-form,
+#temp-conversion {
+  background-color: #282a36;
+}
+
+label {
+  color: white !important;
+  font-size: 12px !important;
+}
+
+.form-floating > .form-control-plaintext ~ label::after,
+.form-floating > .form-control:focus ~ label::after,
+.form-floating > .form-control:not(:placeholder-shown) ~ label::after,
+.form-floating > .form-select ~ label::after {
+  position: absolute;
+  inset: 1rem 0.375rem;
+  z-index: -1;
+  height: 1.5em;
+  background-color: transparent !important;
+  content: "";
+  border-radius: var(--bs-border-radius);
+  color: #fff !important;
+}
+
+#conversion-title {
+  color: white;
 }
 
 /* Tablet */
